2006-11-01 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	(Unbroken most text stuff.  Loading / Saving still doesn't work)
	* src/MMapArea.py:
	* src/TextThought.py:
	Make default be to move a thought
	ctrl-click-drag creates an unending link
	Allow text selection with mouse
	shift and ctrl selection (seem to) work almost as expected

	* src/Links.py:
	If not coords are given, figure them out to default

	(Broke thought selection quite badly with ctrl)
	* src/MMapArea.py:
	* src/BaseThought.py:
	* src/TextThought.py:
	Move moving logic up to MMapArea, where it belongs
	Allows us to move multiple thoughts (which works)
	In the process, broke thought selection quite badly...

	* src/MainWindow.py:
	Fix extended buffer to not crash when selecting > 1 thought

	* src/Links.py:
	Fix typo

2006-10-31 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	(Text Thoughts mostly work)
	* src/BaseThought.py:
	* src/MMapArea.py:
	* src/TextThought.py:
	Make movement with keys work again
	Make Escape finish editing a thought

	(Still pretty borken)
	* src/BaseThought.py:
	* src/MMapArea.py:
	* src/TextThought.py:
	Draw text thoughts.  Add text.  No selection / moving / fancy yet.
	But at least adding text once again works

2006-10-24 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	(Still Broken.  Doesn't die when clicking on the map in edit mode)
	* src/BaseThought.py:
	* src/MMapArea.py:
	* src/Links.py:
	Fix some stuff that appears to have been forgotten

	* src/TextThought.py:
	Begin to move TextThought across (enough to not die when
	clicking on the map in edit mode)

	(Broken)
	* src/MMapArea.py:
	More errors fixed

	* src/Links.py:
	Move links to their new framework (which is surprisingly
	similar to the old one)

	* src/BaseThought.py:
	Add "update_links" signal to allow links to be moved easily

	(Still broken.  Less so)
	* src/MMapArea.py:
	Fix some slight syntax errors

	* src/BaseThought.py:
	Convert BaseThought and ResizableThought to new